# proppilot

./: .gitignore  API_TESTING.md  BUGS_FOUND.md  DBEAVER_SETUP.md  MiRent_Properties_API.postman_collection.json  PropPilot-DBeaver-Project.dbeaver-project  README.md  SETUP.md  dbeaver-connection.json  start-all.sh  status.sh  stop-all.sh
proppilot-backend-python/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
proppilot-backend-python/alembic/: env.py
proppilot-backend-python/app/: config.py  database.py  main.py  models.py
proppilot-backend-python/app/core/: dependencies.py  exception_handlers.py  exceptions.py  security.py
proppilot-backend-python/app/domain/auth/: router.py  schemas.py  service.py
proppilot-backend-python/app/domain/countries/: router.py  schemas.py  service.py
proppilot-backend-python/app/domain/data_portability/: router.py  schemas.py  service.py
proppilot-backend-python/app/domain/indices/: models.py  repository.py  router.py  schemas.py  service.py
proppilot-backend-python/app/domain/leases/: models.py  repository.py  router.py  schemas.py  service.py
proppilot-backend-python/app/domain/payments/: models.py  repository.py  router.py  schemas.py  service.py
proppilot-backend-python/app/domain/properties/: models.py  repository.py  router.py  schemas.py  service.py
proppilot-backend-python/app/domain/tenants/: models.py  repository.py  router.py  schemas.py  service.py
proppilot-backend-python/app/domain/users/: models.py  repository.py  schemas.py
proppilot-backend-python/app/scheduler/: tasks.py
proppilot-backend-python/tests/: conftest.py
(+180 files in other folders)
