[tool.poetry]
name = "proppilot-backend"
version = "1.0.0"
description = "PropPilot - Property Management Backend (Python/FastAPI)"
authors = ["Juan Gracia"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11 || ^3.12"

# Web Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
greenlet = "^3.0.3"

# Authentication
pyjwt = "^2.8.0"
google-auth = "^2.27.0"
cryptography = "^42.0.0"

# Data Validation
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
email-validator = "^2.1.0"

# HTTP Client
httpx = "^0.26.0"

# Excel Processing
openpyxl = "^3.1.2"
xlrd = "^2.0.1"

# Scheduling
apscheduler = "^3.10.4"

# Utilities
python-dateutil = "^2.8.2"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
factory-boy = "^3.3.0"
aiosqlite = "^0.19.0"
ruff = "^0.1.14"
black = "^24.1.1"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
